--- a/.github/workflows/action_space.yaml
+++ b/.github/workflows/action_space.yaml
@@ -33,3 +33,39 @@ jobs:
         free -m
      - name: Start SSH Session
        uses: mxschmitt/action-tmate@v3
+
+     - name: Create Directories
+       run: |
+          mkdir -p /home/runner/work/Ai-agent2/Ai-agent2/config
+          mkdir -p /home/runner/work/Ai-agent2/Ai-agent2/downloads
+          chmod -R 777 /home/runner/work/Ai-agent2/Ai-agent2
+
+     - name: Install Cloudflared
+       run: |
+          # Add cloudflare gpg key
+          sudo mkdir -p --mode=0755 /usr/share/keyrings
+          curl -fsSL https://pkg.cloudflare.com/cloudflare-public-v2.gpg | sudo tee /usr/share/keyrings/cloudflare-public-v2.gpg >/dev/null
+
+          # Add this repo to your apt repositories
+          echo 'deb [signed-by=/usr/share/keyrings/cloudflare-public-v2.gpg] https://pkg.cloudflare.com/cloudflared any main' | sudo tee /etc/apt/sources.list.d/cloudflared.list
+
+          # install cloudflared
+          sudo apt-get update && sudo apt-get install cloudflared
+
+          # install service
+          sudo cloudflared service install ${{ secrets.CLOUDFLARE_TOKEN }}
+
+     - name: Install qBittorrent
+       run: |
+          docker run -d \
+            --name=qbittorrent \
+            -e PUID=1001 \
+            -e PGID=1001 \
+            -e WEBUI_PORT=8081 \
+            -p 8081:8081 \
+            -p 6881:6881 \
+            -p 6881:6881/udp \
+            -v /home/runner/work/Ai-agent2/Ai-agent2/config:/config \
+            -v /home/runner/work/Ai-agent2/Ai-agent2/downloads:/downloads \
+            --restart unless-stopped \
+            linuxserver/qbittorrent:latest
