--- a/.github/workflows/action_space.yaml
+++ b/.github/workflows/action_space.yaml
@@ -76,32 +76,30 @@ jobs:
           # 1. Create the directory
           mkdir -p /home/runner/work/Ai-agent2/Ai-agent2/filebrowser
           
-          # 2. CRITICAL: Create the empty DB file explicitly
-          touch /home/runner/work/Ai-agent2/Ai-agent2/filebrowser/database.db
-          
-          # 3. Create a placeholder settings file (optional but safe)
-          touch /home/runner/work/Ai-agent2/Ai-agent2/filebrowser/filebrowser.json
-          
-          # 4. Set permissions
+          # 2. Set permissions
           chmod -R 777 /home/runner/work/Ai-agent2/Ai-agent2/filebrowser
 
-          # 4. Start the container
+          # 3. Start the container
           docker run -d \
             --name=filebrowser \
             -p 8080:80 \
             -v /home/runner/work/Ai-agent2/Ai-agent2:/srv \
-            -v /home/runner/work/Ai-agent2/Ai-agent2/filebrowser/database.db:/database.db \
-            -v /home/runner/work/Ai-agent2/Ai-agent2/filebrowser/filebrowser.json:/.filebrowser.json \
+            -v /home/runner/work/Ai-agent2/Ai-agent2/filebrowser:/database \
             -e PUID=1001 \
             -e PGID=1001 \
             --restart unless-stopped \
             filebrowser/filebrowser:latest
           
-          # 5. Wait for startup
+          # 4. Wait for startup
           sleep 5
           
-          # 6. Set credentials
-          # Note: We must specify the DB path inside the exec command just in case
+          # 5. Initialize the database
+          docker exec filebrowser filebrowser config init
+          
+          # 6. Set the database path
+          docker exec filebrowser filebrowser config set --database /database/filebrowser.db
+          
+          # 7. Create admin user
           docker exec filebrowser filebrowser users add mahdi mahdi2019 --perm.admin
      - name: Start SSH Session
        uses: mxschmitt/action-tmate@v3
