--- a/.github/workflows/action_space.yaml
+++ b/.github/workflows/action_space.yaml
@@ -1,4 +1,4 @@
-name: qBittorrent Enhanced Edition + FileGator
+name: Run Tests with tmate
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  enhanced-stack:
+  run-test-command:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,22 +25,22 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v4
 
-    - name: Verify System Resources
+    - name: Verify Free Space
       run: |
-        echo "Disk:"
+        echo "Disk Space:"
         df -h
         echo "----------------"
-        echo "Memory:"
+        echo "Memory/Swap:"
         free -m
 
-    - name: Prepare Directories
+    - name: Create Directories
       run: |
         BASE=/home/runner/work/Ai-agent2/Ai-agent2
         mkdir -p $BASE/config
         mkdir -p $BASE/downloads
         chmod -R 777 $BASE
 
-    # 🔥 CRITICAL: ensure clean config so env vars apply
+    # 🔥 IMPORTANT FIX: wipe qbittorrent config so env vars apply
     - name: Reset qBittorrent Config
       run: |
         rm -rf /home/runner/work/Ai-agent2/Ai-agent2/config/*
@@ -59,23 +59,22 @@ jobs:
 
         sudo cloudflared service install ${{ secrets.CLOUDFLARE_TOKEN }}
 
-    - name: Run qBittorrent Enhanced Edition
+    - name: Run qBittorrent
       run: |
         docker run -d \
-          --name=qbittorrent-ee \
+          --name=qbittorrent \
           -e PUID=1000 \
           -e PGID=1000 \
           -e WEBUI_PORT=8081 \
           -e WEBUI_USERNAME=mahdi \
           -e WEBUI_PASSWORD=mahdi2019 \
-          -e QB_EE_AUTO_UPDATE=true \
           -p 8081:8081 \
           -p 6881:6881 \
           -p 6881:6881/udp \
           -v /home/runner/work/Ai-agent2/Ai-agent2/config:/config \
           -v /home/runner/work/Ai-agent2/Ai-agent2/downloads:/downloads \
           --restart unless-stopped \
-          c0re100/qbittorrent-enhanced-edition:latest
+          linuxserver/qbittorrent:latest
 
     - name: Run FileGator
       run: |
