--- a/.github/workflows/action_space.yaml
+++ b/.github/workflows/action_space.yaml
@@ -76,15 +76,16 @@ jobs:
     # -----------------------------------------------------------
     # 2. RUN TTYD (Web Terminal) - Port 7681
     # -----------------------------------------------------------
-    - name: Run Ttyd (Web Terminal)
+    - name: Start Ttyd (Native)
       run: |
-        docker run -d \
-          --name ttyd \
-          -p 7681:7681 \
-          -v /home/runner/work/Ai-agent2/Ai-agent2:/workspace \
-          --workdir /workspace \
-          tsl0922/ttyd:alpine \
-          ttyd -W -c admin:password123 bash
+        # Download the binary directly
+        wget -O ttyd https://github.com/tsl0922/ttyd/releases/download/1.7.4/ttyd.x86_64
+        chmod +x ttyd
+        sudo mv ttyd /usr/local/bin/
+
+        # Run in background on Port 7681
+        # "nohup" keeps it running even if this step finishes
+        nohup ttyd -p 7681 -W -c admin:password123 bash > ttyd.log 2>&1 &
 
     - name: Run qBittorrent
       run: |
@@ -116,4 +117,4 @@ jobs:
 
     # Keep the job alive so Cloudflare tunnel stays up
     - name: Keep Alive
-      run: sleep 6h
+      run: sleep 8h
